--- a/q/274775.html
+++ b/q/274775.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>108</td><td>Haskell</td><td>240810T092753Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274884#274884">pxeger</a></td></tr>
+<tr d-ix="0"><td>106</td><td>Haskell</td><td>240810T092753Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274884#274884">pxeger</a></td></tr>
 <tr d-ix="1"><td>103</td><td>Python</td><td>240810T091053Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274883#274883">pxeger</a></td></tr>
 <tr d-ix="2"><td>096</td><td>Swift</td><td>240809T175534Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274859#274859">TKDKid10</a></td></tr>
 <tr d-ix="3"><td>063</td><td>JavaScript</td><td>240808T030639Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274781#274781">noodle p</a></td></tr>
@@ -51,18 +51,17 @@
 <tr d-ix="22"><td>061</td><td>Uiua</td><td>240808T025342Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274779#274779">noodle p</a></td></tr>
 <tr d-ix="23"><td>068</td><td>Python</td><td>240808T013510Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274777#274777">Albert.L</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a>, 108 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a>, 106 bytes</h1>
 <pre class="lang-haskell prettyprint-override"><code>import Prelude(putStr)
 _._=0
 length=0
 day = &quot;Monday&quot;
 x = day.length
-print(x)
- =putStr x
+print(x)=putStr x
 main=print&quot;24 hours&quot;
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m708I7E4OzUnZ8GCpaUlaboWN3Mycwvyi0oUAopSc0pTUjUKSkuCS4o0ueL14m0NuHJS89JLMoCMlMRKBVsFJd_8PCBLiasCyAEy9CDyXAVFmXklGhWaXAq2EP0KFVy5iZl5tmAJJSMThYz80qJiJYidUKthTgAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>Inspired by <a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274883#comment591337_274841">WheatWizard's comment</a></p>
+<p><a href="https://ato.pxeger.com/run?1=m708I7E4OzUnZ8GCpaUlaboWN7Mycwvyi0oUAopSc0pTUjUKSkuCS4o0ueL14m0NuHJS89JLMoCMlMRKBVsFJd_8PCBLiasCyAEy9CDyXAVFmXklGhWathDdChVcuYmZebZgYSUjE4WM_NKiYiWIjVCLYQ4AAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Inspired by <a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274883#comment591337_274841">WheatWizard's comment</a>.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 103 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>import gc
@@ -135,17 +134,17 @@ x = ();
 print!(&quot;24 hours&quot;)
 </code></pre>
 </div>
-<div id="pu6" class="pu"><h1><a href="http://www.gnuplot.info/" rel="nofollow noreferrer">gnuplot</a>, 58 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="http://www.gnuplot.info/" rel="noreferrer">gnuplot</a>, 58 bytes</h1>
 <pre><code>length=&quot;\r24 hours&quot;
 day = &quot;Monday&quot;
 x = day.length
 print(x)
 </code></pre>
-<p><a href="https://tio.run/##S88rLcjJL/lfnKpQUKSkq/Q/JzUvvSTDVimmyMhEISO/tKhYiSslsVLBVkHJNz8PyFLiqgBygAw9iFKugqLMvBKNCs3//wE" rel="nofollow noreferrer" title="gnuplot – Try It Online">Try it online!</a> (Note that due to a bug, the output from both TIO and gnuplot.io is different from the output produced on a local Windows machine, see the screenshot below.)</p>
+<p><a href="https://tio.run/##S88rLcjJL/lfnKpQUKSkq/Q/JzUvvSTDVimmyMhEISO/tKhYiSslsVLBVkHJNz8PyFLiqgBygAw9iFKugqLMvBKNCs3//wE" rel="noreferrer" title="gnuplot – Try It Online">Try it online!</a> (Note that due to a bug, the output from both TIO and gnuplot.io is different from the output produced on a local Windows machine, see the screenshot below.)</p>
 <h4>How this works:</h4>
 <p>The dot operator concatenates two strings. This way the string x contains <code>&quot;Monday\r24 hours&quot;</code>. When printing x, first &quot;Monday&quot; appears, then the symbol <code>\r</code> (carriage return without linefeed) moves the cursor to the start of the same line and then printing &quot;24 hours&quot; over the string &quot;Monday&quot; overwrites it.</p>
-<p><a href="https://i.sstatic.net/gY4vz6fI.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/gY4vz6fI.png" alt="enter image description here" /></a></p>
-<p><strong>Edit:</strong> since this answer has received so many upvotes, I have decided to try and print the string <code>&quot;Monday\r24 hours&quot;</code> from the Linux OS. The result in Python can be checked online <a href="https://onlinegdb.com/Fy-zCnfDZ" rel="nofollow noreferrer">here</a>.</p>
+<p><a href="https://i.sstatic.net/gY4vz6fI.png" rel="noreferrer"><img src="https://i.sstatic.net/gY4vz6fI.png" alt="enter image description here" /></a></p>
+<p><strong>Edit:</strong> since this answer has received so many upvotes, I have decided to try and print the string <code>&quot;Monday\r24 hours&quot;</code> from the Linux OS. The result in Python can be checked online <a href="https://onlinegdb.com/Fy-zCnfDZ" rel="noreferrer">here</a>.</p>
 </div>
 <div id="pu7" class="pu"><h1><a href="https://kotlinlang.org" rel="nofollow noreferrer">Kotlin</a> (script mode), 87 bytes</h1>
 <pre class="lang-kotlin prettyprint-override"><code>val print={_:Int-&gt;print(&quot;24 hours&quot;)}
