--- a/q/64938.html
+++ b/q/64938.html
@@ -26,20 +26,41 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>020</td><td>Japt</td><td>240811T152510Z</td><td><a href="https://codegolf.stackexchange.com/questions/64938/adjacent-letter-test/274899#274899">Shaggy</a></td></tr>
-<tr d-ix="1"><td>067</td><td>Uiua</td><td>240811T114839Z</td><td><a href="https://codegolf.stackexchange.com/questions/64938/adjacent-letter-test/274898#274898">nyxbird</a></td></tr>
-<tr d-ix="2"><td>156</td><td>Clojure</td><td>171212T132001Z</td><td><a href="https://codegolf.stackexchange.com/questions/64938/adjacent-letter-test/150446#150446">NikoNyrh</a></td></tr>
-<tr d-ix="3"><td>1731</td><td>PHP</td><td>171130T133124Z</td><td><a href="https://codegolf.stackexchange.com/questions/64938/adjacent-letter-test/149560#149560">Titus</a></td></tr>
-<tr d-ix="4"><td>060</td><td>Pyth</td><td>151127T030712Z</td><td><a href="https://codegolf.stackexchange.com/questions/64938/adjacent-letter-test/64939#64939">Maltysen</a></td></tr>
-<tr d-ix="5"><td>227</td><td>C#</td><td>151127T040550Z</td><td><a href="https://codegolf.stackexchange.com/questions/64938/adjacent-letter-test/64942#64942">noisyass</a></td></tr>
-<tr d-ix="6"><td>078</td><td>Japt</td><td>151127T032821Z</td><td><a href="https://codegolf.stackexchange.com/questions/64938/adjacent-letter-test/64940#64940">ETHprodu</a></td></tr>
+<tr d-ix="0"><td>045</td><td>Vyxal 3</td><td>240812T002808Z</td><td><a href="https://codegolf.stackexchange.com/questions/64938/adjacent-letter-test/274903#274903">bb94</a></td></tr>
+<tr d-ix="1"><td>020</td><td>Japt</td><td>240811T152510Z</td><td><a href="https://codegolf.stackexchange.com/questions/64938/adjacent-letter-test/274899#274899">Shaggy</a></td></tr>
+<tr d-ix="2"><td>067</td><td>Uiua</td><td>240811T114839Z</td><td><a href="https://codegolf.stackexchange.com/questions/64938/adjacent-letter-test/274898#274898">nyxbird</a></td></tr>
+<tr d-ix="3"><td>156</td><td>Clojure</td><td>171212T132001Z</td><td><a href="https://codegolf.stackexchange.com/questions/64938/adjacent-letter-test/150446#150446">NikoNyrh</a></td></tr>
+<tr d-ix="4"><td>1731</td><td>PHP</td><td>171130T133124Z</td><td><a href="https://codegolf.stackexchange.com/questions/64938/adjacent-letter-test/149560#149560">Titus</a></td></tr>
+<tr d-ix="5"><td>060</td><td>Pyth</td><td>151127T030712Z</td><td><a href="https://codegolf.stackexchange.com/questions/64938/adjacent-letter-test/64939#64939">Maltysen</a></td></tr>
+<tr d-ix="6"><td>227</td><td>C#</td><td>151127T040550Z</td><td><a href="https://codegolf.stackexchange.com/questions/64938/adjacent-letter-test/64942#64942">noisyass</a></td></tr>
+<tr d-ix="7"><td>078</td><td>Japt</td><td>151127T032821Z</td><td><a href="https://codegolf.stackexchange.com/questions/64938/adjacent-letter-test/64940#64940">ETHprodu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 20 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, 45 bytes</h1>
+<p>Returns the number of (possibly overlapping) runs.</p>
+<pre><code>9zṘ“&quot;ᶜ½(ẆNᴳṀ⊻ᵡHṗᵏ₀Ṃ]Ḅġ„+£ƛ¥$Ḟ:₀Ṡ$₀%;}ᵃȧṠ1=ᵃ∧∑
+</code></pre>
+<p><a href="https://vyxal.github.io/latest.html#WyIiLCLhuYLGmyIsIjl64bmY4oCcXCLhtpzCvSjhuoZO4bSz4bmA4oq74bWhSOG5l+G1j+KCgOG5gl3huITEoeKAnivCo8abwqUk4bieOuKCgOG5oCTigoAlO33htYPIp+G5oDE94bWD4oin4oiRIiwifSIsImFzZCB5dHJld3EganU3IGFiYzZ5aGRlZiBhYmMgYWFhIHFld3JldHJ5IHpzZSBxd2RmYm4gcGFzIiwiMy40LjIiXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
+<h2>Explanation</h2>
+<pre><code>9zṘ“&quot;ᶜ½(ẆNᴳṀ⊻ᵡHṗᵏ₀Ṃ]Ḅġ„+£ƛ¥$Ḟ:₀Ṡ$₀%;}ᵃȧṠ1=ᵃ∧∑­⁡​‎‎⁪⁡⁪⁠⁪⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁪‏⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪⁠⁪⁪‏​⁡⁠⁡‌⁢​‎‎⁪⁡⁪⁠⁪⁢⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁣⁪‏‏​⁡⁠⁡‌⁣​‎‎⁪⁡⁪⁠⁪⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁣⁡⁪‏‏​⁡⁠⁡‌⁤​‎⁪⁪⁠‎⁪⁡⁪⁠⁪⁢⁣⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁢⁡⁪‏‏​⁡⁠⁡‌⁢⁡​‎‎⁪⁡⁪⁠⁪⁢⁣⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁣⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁤⁡⁪‏‏​⁡⁠⁡‌⁢⁢​‎‎⁪⁡⁪⁠⁪⁢⁤⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁤⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁤⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁡⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁡⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁡⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁡⁤⁪‏‏​⁡⁠⁡‌⁢⁣​‎‎⁪⁡⁪⁠⁪⁣⁢⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁢⁣⁪‏‏​⁡⁠⁡‌⁢⁤​‎‎⁪⁡⁪⁠⁪⁣⁢⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁣⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁣⁢⁪‏‏​⁡⁠⁡‌⁣⁡​‎‎⁪⁡⁪⁠⁪⁣⁣⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁣⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁤⁡⁪‏‏​⁡⁠⁡‌­
+9zṘ“                                           # ‎⁡Push &quot;1234567890&quot;
+    &quot;ᶜ½(ẆNᴳṀ⊻ᵡHṗᵏ₀Ṃ]Ḅġ„                        # ‎⁢Base-252 compression of &quot;qwertyuiopasdfghjkl zxcvbnm&quot;
+9zṘ“&quot;ᶜ½(ẆNᴳṀ⊻ᵡHṗᵏ₀Ṃ]Ḅġ„+£                      # ‎⁣Push &quot;1234567890qwertyuiopasdfghjkl zxcvbnm&quot; and store in register
+                         ƛ          }          # ‎⁤For each character of the input...
+                          ¥$Ḟ                  # ‎⁢⁡Find its index i in the register
+                             :₀Ṡ$₀%;           # ‎⁢⁢Get [i // 10, i % 10]
+                                     ᵃȧ        # ‎⁢⁣Get the absolute difference between each adjacent pair of elements
+                                       Ṡ1=     # ‎⁢⁤Get whether each element has a sum of 1
+                                          ᵃ∧∑  # ‎⁣⁡Get the number of adjacent elements that are both 1
+💎
+</code></pre>
+<p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 20 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>;ø4o!z9õ ¬+DiRiV¹cã3
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=O/g0byF6OfUgrCtEaVJpVrlj4zM&amp;input=IkFTRFIi" rel="nofollow noreferrer">Try it</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.uiua.org" rel="nofollow noreferrer">Uiua</a>, 67 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.uiua.org" rel="nofollow noreferrer">Uiua</a>, 67 bytes</h1>
 <pre><code>↥∩(/↥♭≡⌕⊙¤◫3),⊙:∩[≡⇌.]⍉.↯4_∞⊂+@1⇡9&quot;0qwertyuiopasdfghjkl zxcvbnm   &quot;
 </code></pre>
 <p><a href="https://www.uiua.org/pad?src=0_12_0-rc_1__ZiDihpAg4oal4oipKC_ihqXima3iiaHijJXiipnCpOKXqzMpLOKKmTriiKlb4omh4oeMLl3ijYku4oavNF_iiJ7iioIrQDHih6E5IjBxd2VydHl1aW9wYXNkZmdoamtsIHp4Y3Zibm0gICAiCmYgImFzZCIKZiAieXRyZXdxIgpmICJqdTciCmYgImFiYzZ5aGRlZiIKQCAKZiAiYWJjIgpmICJhYWEiCmYgInFld3JldHJ5IgpmICJ6c2UiCmYgInF3ZGZibiIKZiAicGFzIgo=" rel="nofollow noreferrer">Try it!</a></p>
@@ -59,19 +80,19 @@
 <span class="math-container">```</span>
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h2>Clojure, 156 bytes</h2>
+<div id="pu3" class="pu"><h2>Clojure, 156 bytes</h2>
 
 <pre><code>#(some(set(for[R[["1234567890""QWERTYUIOP""ASDFGHJKL.""ZXCVBNM..."]]R[R(apply map list R)]r R p(partition 3 1 r)p((juxt seq reverse)p)]p))(partition 3 1 %))
 </code></pre>
 
 <p>This was a quite interesting task to implement.</p>
 </div>
-<div id="pu3" class="pu"><h1>PHP, 173+1 bytes</h1>
+<div id="pu4" class="pu"><h1>PHP, 173+1 bytes</h1>
 <pre class="lang-php prettyprint-override"><code>while(~$argn[$i+2])($p=preg_match)($r=_.join(&quot;.{10}&quot;,str_split(($t=substr($argn,$i++,3)))).&quot;|$t&quot;._,$d=_1234567890_qwertyuiop_asdfghjkl__zxcvbnm)||$p($r,strrev($d))?die(1):0;
 </code></pre>
 <p>Run as pipe with <code>-nR</code> with lowercase input or <a href="http://sandbox.onlinephpfunctions.com/code/27fe1d84d61b3c3d0e1690da075118d8be89ab2f" rel="nofollow noreferrer">try it online</a>.</p>
 </div>
-<div id="pu4" class="pu"><h1>Pyth - <s>66</s> <s>62</s> 60 bytes</h1>
+<div id="pu5" class="pu"><h1>Pyth - <s>66</s> <s>62</s> 60 bytes</h1>
 <p>Pretty straightforward approach. Checks if any of substrings len 3 are in any of the rotations of the keyboard. Will be using base encoding for keyboard.</p>
 <pre><code>.E}Rjb+J+Kc+jkS9&quot;0
 qwertyuiop
@@ -80,7 +101,7 @@ zxcvbnm&quot;b.tKN_MJ.:z3
 </code></pre>
 <p><a href="http://pyth.herokuapp.com/?code=.E%7DRjb%2BJ%2BKc%2BjkS9%220%0Aqwertyuiop%0Aasdfghjkl%0Azxcvbnm%22b.tKN_MJ.%3Az3&amp;input=asd&amp;test_suite=1&amp;test_suite_input=asd%0Aytrewq%0Aju7%0Aabc6yhdef%0Aabc%0Aaaa%0Aqewretry%0Azse%0Aqwdfbn%0Apas&amp;debug=0" rel="nofollow noreferrer">Test Suite</a>.</p>
 </div>
-<div id="pu5" class="pu"><h2>C#, 227</h2>
+<div id="pu6" class="pu"><h2>C#, 227</h2>
 
 <pre><code>int h(string k){var q="1234567890,QWERTYUIOP,ASDFGHJKL,ZXCVBNM,1QAZ,2WSX,3EDC,4RFV,5TGB,6YHN,7UJM,8IK,9OL,";int i=0,j=0;for(;i&lt;k.Length-2;i++)if((q+String.Concat(Enumerable.Reverse(q))).Contains(k.Substring(i,3)))j=1;return j;}
 </code></pre>
@@ -90,7 +111,7 @@ Concatenated all keys horizontal and vertical, and reversed, and checks if any o
 
 <p>C# is really verbose, gotta dive into other languages :(</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/ETHproductions/Japt" rel="nofollow noreferrer">Japt</a>, 78 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/ETHproductions/Japt" rel="nofollow noreferrer">Japt</a>, 78 bytes</h1>
 <p><strong>Japt</strong> is a shortened version of <strong>Ja</strong>vaScri<strong>pt</strong>. <a href="https://codegolf.stackexchange.com/a/62685/42545">Interpreter</a></p>
 <pre><code>V=1oA ¬+`0\nqØÆyuiop\n?dfghjkl \nzxcvbnm`;1+¡Y©(((VbX -VbUgY-1)-5 a -5 %A a)bB
 </code></pre>
