--- a/q/226849.html
+++ b/q/226849.html
@@ -36,6 +36,15 @@
 <pre class="lang-perl prettyprint-override"><code>{2 min+(.match(/^(\d|a&lt;[cglmrstu]&gt;|b&lt;[aehikr]&gt;?|c&lt;[adeflmnorsu]&gt;?|d&lt;[bsy]&gt;|e&lt;[rsu]&gt;|f&lt;[elmr]&gt;?|g&lt;[ade]&gt;|h&lt;[efgos]&gt;?|in|ir?|kr?|l&lt;[airuv]&gt;|m&lt;[cdgnot]&gt;|n&lt;[abdehiop]&gt;?|os?|og|p&lt;[abdmortu]&gt;?|r&lt;[abefghnu]&gt;?|s&lt;[bcegimnr]&gt;?|t&lt;[abcehilms]&gt;|u|v|w|yb?|xe|zn|zr)+$/):ex)}
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=XZDRToMwFIZj4tWegkxjIItuYGKIw_EgOBMohTbQdmlhjnl8Em-40MRXck_jocguvDhp_--c8_9NPz51WrX9t-icm8J5mn21TXEbni4u3wJHcLlw70TaEOYuX9znHNIoIWUttGna7QayKEkp45XebmIgKHJa1EIqbdqB5FGSmQ7naJRYBEWUUNwemqUdR8aQFaUyA-QSuI6hwqqxz3W7xwmBoXkpVYN3iTjLMVTthgVlsErYWSqUbmywHiSaMmmlwXcQWnIhbXIzdAla1AJDoYU9vEKXxXCgcJRw1N7ieuk90oP3Pn7Gj1rPTNo5hTsnau6tnSsnmEDAwnv1MEJ_gjX_D0a9OttME2cf4q9Y-Gfuj7F9P56_" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<h2>Explanation</h2>
+<pre><code>{2 min+(.match(/^(...)+$/):ex)}­⁡​‎‎⁪⁡⁪⁠⁪⁤⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁣⁡⁪‏‏​⁡⁠⁡‌⁢​‎‎⁪⁡⁪⁠⁪⁣⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁣⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁣⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁣⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁤⁡⁪‏‏​⁡⁠⁡‌⁣​‎‎⁪⁡⁪⁠⁪⁢⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁤⁢⁪‏‏​⁡⁠⁡‌⁤​‎‎⁪⁡⁪⁠⁪⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁪‏‏​⁡⁠⁡‌­
+               /^(...)+$/        # ‎⁡Regex that matches a digit or chemical symbol one or more times
+        .match(          ):ex    # ‎⁢Get a list of all possible matches of this regex against the input
+      +(                     )   # ‎⁣Get the number of elements in that list
+ 2 min                           # ‎⁤Takes the min of 2 and that number
+💎
+</code></pre>
+<p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 124 bytes</h1>
 <pre><code>“€ṡƥvẏÄhʠ!ịẈ?iḥẋỌ¹'ṅɦçç⁹.Sð$ṚṠȥṢK}/&gt;œ;ỵZƤẓ}:;tÆṾḶj⁶ḄỵḋİʠUḊẈ½^ɲṆßṇµ⁶æḟɦ1¥©ḟþjHṀṪỤƑgạȥḂṾḞƓƑ@Ð⁾æƭVẈṣ’ḃ90Äḃ26ịØaØDW€¤;
