--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240812T074834Z
+"   /golfscore                                      20240812T080043Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/242459.html">Sum of two squares                              : 0242459</a>
 <a href="q/274485.html">Find the newest element                         : 0274485</a>
 <a href="q/274448.html">Factoriadic Fraction Addition                   : 0274448</a>
 <a href="q/274690.html">Cubic Concatenation                             : 0274690</a>
