--- a/q/274596.html
+++ b/q/274596.html
@@ -26,14 +26,42 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>051</td><td>Haskell + hgl</td><td>240801T025540Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274608#274608">Wheat Wi</a></td></tr>
-<tr d-ix="1"><td>056</td><td>Raku Perl 6 rakudo</td><td>240802T012639Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274628#274628">bb94</a></td></tr>
-<tr d-ix="2"><td>054</td><td>Charcoal</td><td>240801T084735Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274612#274612">Neil</a></td></tr>
-<tr d-ix="3"><td>039</td><td>Retina 0.8.2</td><td>240731T235023Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274605#274605">Neil</a></td></tr>
-<tr d-ix="4"><td>075</td><td>Perl Mutf8 MUnicodeNormalize</td><td>240731T140151Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274599#274599">鳴神裁四点一号</a></td></tr>
-<tr d-ix="5"><td>030</td><td>Jelly</td><td>240731T184150Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274603#274603">Jonathan</a></td></tr>
+<tr d-ix="0"><td>031</td><td>05AB1E</td><td>240812T085233Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274913#274913">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>051</td><td>Haskell + hgl</td><td>240801T025540Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274608#274608">Wheat Wi</a></td></tr>
+<tr d-ix="2"><td>056</td><td>Raku Perl 6 rakudo</td><td>240802T012639Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274628#274628">bb94</a></td></tr>
+<tr d-ix="3"><td>054</td><td>Charcoal</td><td>240801T084735Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274612#274612">Neil</a></td></tr>
+<tr d-ix="4"><td>039</td><td>Retina 0.8.2</td><td>240731T235023Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274605#274605">Neil</a></td></tr>
+<tr d-ix="5"><td>075</td><td>Perl Mutf8 MUnicodeNormalize</td><td>240731T140151Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274599#274599">鳴神裁四点一号</a></td></tr>
+<tr d-ix="6"><td>030</td><td>Jelly</td><td>240731T184150Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274603#274603">Jonathan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, <s>78</s> <s>60</s> 51 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 31 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>l„ae¬:žPS¡õKü2εεN&lt;è&quot;eiéí&quot;så}Ë}P
+</code></pre>
+<p><a href="https://tio.run/##AUYAuf9vc2FiaWX//2zigJ5hZcKsOsW@UFPCocO1S8O8Ms61zrVOPMOoImVpw6nDrSJzw6V9w4t9UP//ZGVhcnRow6FpcmVhY2hh" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##LY6xSgNBEIb7eYpwtZWlCCEBCxEk4BP8dzfZW9jswu5GCBiwsrHzAYQtBA@0kmtELDLY5iHyIudEbGbm//lm5g8JteXx7nYzrSaHh6dJNd2M7nD/DN69nf18L252RYYr@TrdD/vh@lxeK7bSy3uV5GUrj9vFeDK2jJg7KTYymg60QhtBfq0iS/FkEFwGNQzvkWBzx5S8lFWnBi3lQwcbyYGzOkrW0iPSnKFr1jN1s3BsNZyjHJnJGKP4xT8Os04kn0kTtBz0UhNaNsEtqeXjYziblAyWZvNLgk8cqI6sOZwUgvRNICn8V4/iFw" rel="nofollow noreferrer">verify all test cases</a>.</p>
+<p><strong>Explanation:</strong></p>
+
+<pre class="lang-python prettyprint-override"><code>l            # Convert the (implicit) input-string to lowercase
+ „ae         # Push string &quot;ae&quot;
+    ¬        # Push its first character &quot;a&quot; (without popping)
+     :       # Replace all &quot;ae&quot; with &quot;a&quot; in the lowercase input
+žP           # Push the consonants constant &quot;bcdfghjklmnpqrstvwxz&quot;
+  S¡         # Split the string on each consonant
+    õK       # Remove all empty strings (where multiple adjacent consonants were)
+ü2           # Pop and push all overlapping pairs
+  ε          # Map over each pair:
+   ε         #  Map over both vowel-strings in each pair:
+    N        #   Push the 0-based index
+     &lt;       #   Decrease it by 1
+      è      #   Use it to index into the vowel-string;
+             #   N=0 → -1 → last character; N=1 → 0 → first character
+    &quot;eiéí&quot;så #   Check if this character is one of &quot;eiéí&quot;
+   }Ë        #  After the inner map: Check if both vowel-checks are the same;
+             #  either [1,1], aka both slender; or [0,0], aka both broad
+  }P         # After the outer map: Check if all are truthy
+             # (which is output implicitly as result)
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, <s>78</s> <s>60</s> 51 bytes</h1>
 <pre><code>(ma.*pPX&quot;[ei][^aeiou]+[aou]&quot;~&lt;rv)&lt;rmD&lt;&lt;skX&quot;ae_&quot;&lt;mtL
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=ZY-9TsMwFEb3PMWVl7SFsCExpEyMCGVgqBSV6tLcxFbtuDgOlIUXYWkHhDowdWONxMzat6nz0waJ5drn-H6f5PdPjsWCpFzvf4RaamPhqUQpUkEJRIZkmZDXPUReEMCdtqBzQKvhlWxt7jlBqqXULyLPwO1KUpRbtELnBaAhKGrZVHrIfRjDwM3R9dAz6gb8alMrH_0Otw3SEb8aFEfcNaiP-N1g2eLK3VcfpU2Dq_1lOh4ovBgtowmLSUzjByShy-lZjG6yt9A8D0MXCsNiMWFIMxYqe9uFfxWK3JUl2gNQMxgsDYSQDh0BxMAkoeWYs4bPgSWExvJqIwzhnOPJS6R6z_YmrXaKozAn8Vhtsacsy5jXt8o_SUPCcllt-uQ_g9V2rnsiUh1N23-t1-15AA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -61,12 +89,12 @@
 <li>Just as there are <code>(&lt;&gt;?)</code> and <code>(?&lt;&gt;)</code>, there should be <code>(&lt;&gt;*)</code>, <code>(*&lt;&gt;)</code>, <code>(&lt;&gt;+)</code> and <code>(+&lt;&gt;)</code>.</li>
 </ul>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, 56 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, 56 bytes</h1>
 <pre class="lang-perl prettyprint-override"><code>{s:g:i/ae/a/;$_|.flip!~~m:i:m/&lt;[ei]&gt;&lt;-[aeiou]&gt;+&lt;[aou]&gt;/}
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=rZDPTuMwEIfFdZ7CQAVFQH1CQv0TLUgcuK200l4qNpomk8TCiRfbAVWlvMhyaCQ4cN4bVz8FPA1uQikVWrQr7cX2jOf79NP8utN4Xs6e127z8VYygE02aYUDgznlqM_Zt27aFRyJI-_IaG8bt3vrbd_k_f0hklDlWbDLQ35zk3e_HvAh-kY4JHF2PT_CuuY707-wfnSufyqtne1PjDsr_PBHY9598yw7S9-qpbOwt_-D7qNL_IPtvrTJ_uHT4cQslb1WeN1JpPj5ast5f44G77bYr_FgwT-vRT3Ix-yL1aXNxmzALq76EBNqm7lKaMIoQ8gx1ghF6QvrqgJSVNIiRIRFgQaFzQhM4ao88w1I3G__EBokkvUdPzlyD6jhmNBjoiDIjtT8GqGUYDURpGnqx09exzEtDbhH4xPEpLwpaEImKM0iY6RiSpVMfNh5FpTCeFgJODo-BSwMKRhp8tGkqwDdQ6TAVVSfdeGVYHDMNr57NO5u9CBR-m0PE2Cs_m2FbBCwScJa4dTPTBvmtLhcoZpgf4SaXc9mzf0C" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 54 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 54 bytes</h1>
 <pre><code>¹ＦＥＥ⪫⪪Ｓae¦a℅﹪℅↧ι¹³²⁻№]aouvι№eiι«Ｆ∧ι∧№υ⁰№υ±ι⎚Ｆ↔ι≔⟦⟧υ⊞υι
 </code></pre>
 <p><a href="https://tio.run/##PU9BasMwEDw3rxA@rUGFpj32FHxKqZNAjiWHja3aC0JrJG16KH1M39KHqZJcKlgNszszKw0z@oHRpnTy5CJs2@fNO3sFPS61XpgcnBdLEfZukXiOWTdBq1WDpqlQ7i7n4BCNh55HsQxHP5JDC6/8YfyAwQC1Wbd9emwL9uQkQMeSdzYXZLk1WlEJWluGKs9HfW7u6ot2bgTSqsAqEq0e/h2ZHMyEse4pts4a9JC/8@e@BrayjtUuBJocvF20kqI4SZhLAmXyldLVG4qz/flO9zf7Cw" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Outputs a Charcoal boolean, i.e. <code>-</code> for valid, nothing if not. Explanation:</p>
@@ -86,7 +114,7 @@
 </code></pre>
 <p>Save the type of this letter.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 39 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 39 bytes</h1>
 <pre><code>ae|[aáoóuú]
 #@
 [eéií]
@@ -110,13 +138,13 @@ i)1`(#|@)\w+\1
 <p>Check for consonants surrounded by vowels of different types (which equates to having surrounding symbols of the same type).</p>
 <p>Note that Retina defaults to the ISO-8859-1 code page so all of the Irish vowels only cost one byte.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://www.perl.org" rel="nofollow noreferrer">Perl</a> <code>-Mutf8</code> <code>-MUnicode::Normalize</code>, 75 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://www.perl.org" rel="nofollow noreferrer">Perl</a> <code>-Mutf8</code> <code>-MUnicode::Normalize</code>, 75 bytes</h1>
 <p>Inverted truthy and falsey.</p>
 <pre class="lang-perl prettyprint-override"><code>sub{s/ae/a/ig;$_=NFD$_;s/\pM//ug;s/[^aeiou]+/_/gi;/[aou]_[ei]|[ei]_[aou]/i}
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=VVLBbtswDAV25DfsIHhBkWJrfS3suWi7LsAwrDssPSWZwTi0LcCWMknGkKX9kl0SYD30vE_wV3RfM8pxs-wi8VGP5CPFn7-WZKrN01FjSTQuP4u9catkphcURTfa1FjJHxTXKzHIkwemnJw9fbTNfG1DpBBDWcSDNLkZXQ_S2IbT5acwbAq2Jl-RpG5mr8M0LGQcTpBBOiE5u_NH2uFQ3u9S_nnx0pe4cKZxpSQrEvHt-wQWhMaV7VYawqxEqHFhEFTDwLVbBQXqyiFkhEqhRelKAqvabV2yA_L2NxvSQIXk2MPMefuIBq4IOUwqgvJS-2uOVQXOEEFRFEx_39NnMXhVOVaWVs-i_GgKXeWszhfn-VhmawmXVx8AlSUNc0OspWq3gO1jpqHdUnd2gJMujVROBGPf7UpkaLnj4HTf_WkAI1_y30uvgB8g-D-c6UkSTRW73XCf4XhPmqrRLvaA1Wc7JL1rrNO1kGrZuAPqID0WuTbi7XkM_OnCrcHD4QX71zCXquZhDL-Mrz_fjt8Ekd-ggNMK4fdFFzwxXose2oTtV7wpPuuz03hKfnI-HNjO1wvi2IgfOxX30C_JZrO7_wI" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 30 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 30 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>Œlœṣ⁾aeKe€ØCœpƊO%65%9Ḃj€-FSƝ1e
 </code></pre>
 <p>A monadic Link that accepts a list of the specified characters and yields <code>0</code> for valid or <code>1</code> for invalid.</p>
