--- a/q/242459.html
+++ b/q/242459.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>012</td><td>Pyth</td><td>240812T080043Z</td><td><a href="https://codegolf.stackexchange.com/questions/242459/sum-of-two-squares/274910#274910">int 21h </a></td></tr>
+<tr d-ix="0"><td>011</td><td>Pyth</td><td>240812T080043Z</td><td><a href="https://codegolf.stackexchange.com/questions/242459/sum-of-two-squares/274910#274910">int 21h </a></td></tr>
 <tr d-ix="1"><td>006</td><td>Thunno 2</td><td>230818T105356Z</td><td><a href="https://codegolf.stackexchange.com/questions/242459/sum-of-two-squares/264338#264338">The Thon</a></td></tr>
 <tr d-ix="2"><td>047</td><td>Desmos</td><td>220503T031934Z</td><td><a href="https://codegolf.stackexchange.com/questions/242459/sum-of-two-squares/246833#246833">fireflam</a></td></tr>
 <tr d-ix="3"><td>037</td><td>Regex ECMAScript or better</td><td>220210T055934Z</td><td><a href="https://codegolf.stackexchange.com/questions/242459/sum-of-two-squares/242646#242646">Deadcode</a></td></tr>
@@ -62,19 +62,19 @@
 <tr d-ix="33"><td>015</td><td>Wolfram Language Mathematica</td><td>220207T084527Z</td><td><a href="https://codegolf.stackexchange.com/questions/242459/sum-of-two-squares/242462#242462">alephalp</a></td></tr>
 <tr d-ix="34"><td>007</td><td>Brachylog</td><td>220207T084213Z</td><td><a href="https://codegolf.stackexchange.com/questions/242459/sum-of-two-squares/242460#242460">Fatalize</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/isaacg1/pyth" rel="nofollow noreferrer">Pyth</a>, 12 bytes</h1>
-<pre><code>}Q+M^^R2UhQ2
+<div id="pu0" class="pu"><h1><a href="https://github.com/isaacg1/pyth" rel="nofollow noreferrer">Pyth</a>, <s>12</s> 11 bytes</h1>
+<pre><code>}Q+M^^R2hQ2
 </code></pre>
-<p><a href="https://tio.run/##K6gsyfj/vzZQ2zcuLsgoNCPQ6P9/YwA" rel="nofollow noreferrer" title="Pyth – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##K6gsyfj/vzZQ2zcuLsgoI9Do/38A" rel="nofollow noreferrer" title="Pyth – Try It Online">Try it online!</a></p>
 <p><a href="https://tio.run/##K6gsyfj/36c2qdg3Li7IKDQjyeh/pW@0gYKhgpGCsYKJgqmCmYK5giGQa/AfAA" rel="nofollow noreferrer" title="Pyth – Try It Online">Test cases</a></p>
-<p>I have a feeling that pyth can do better. 12 Bytes, you know, it's in comparison to other golfing languages a lot.</p>
+<p>I have a feeling that pyth can do better. 11 Bytes, you know, it's in comparison to other golfing languages a lot.</p>
 <p>The algorithm is not different from the published answers and, consequently, the performance is not sufficient to calculate the two largest test values in less than 60 sec.</p>
 <h4>Commented version:</h4>
 <pre class="lang-python prettyprint-override"><code>}Q           # check whether the input value Q is within:
   +M         # the sums 
     ^      2 # of cartesian product with itself
      ^R2     # of squared
-        UhQ  # range of 0..Q
+        hQ   # range of 0..Q
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/Thunno/Thunno2" rel="nofollow noreferrer">Thunno 2</a>, 6 <a href="https://github.com/Thunno/Thunno2/blob/main/docs/codepage.md" rel="nofollow noreferrer">bytes</a></h1>
@@ -413,13 +413,13 @@ j   # Swap stack
 ~[  # n in list
 </code></pre>
 </div>
-<div id="pu26" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, <s>41</s> 39 bytes</h1>
-<p>Or <strong><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>&gt;=4.1, 32 bytes</strong> by replacing the word <code>function</code> with a <code>\</code>.</p>
+<div id="pu26" class="pu"><h1><a href="https://www.r-project.org/" rel="noreferrer">R</a>, <s>41</s> 39 bytes</h1>
+<p>Or <strong><a href="https://www.r-project.org/" rel="noreferrer">R</a>&gt;=4.1, 32 bytes</strong> by replacing the word <code>function</code> with a <code>\</code>.</p>
 <p><em>Edit: -2 bytes thanks to <a href="https://codegolf.stackexchange.com/users/67312/giuseppe">@Giuseppe</a>.</em></p>
 
 <pre class="lang-r prettyprint-override"><code>function(n)n%in%outer(k&lt;-(0:n)^2,k,`+`)
 </code></pre>
-<p><a href="https://tio.run/##K/qfZvs/rTQvuSQzP08jTzNPNTNPNb@0JLVII9tGV8PAKk8zzkgnWydBO0Hzf5qGgSZXTmJBQU6lhqGVuU6aJleahqEhiLS0tDSH0paa/wE" rel="nofollow noreferrer" title="R – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##K/qfZvs/rTQvuSQzP08jTzNPNTNPNb@0JLVII9tGV8PAKk8zzkgnWydBO0Hzf5qGgSZXTmJBQU6lhqGVuU6aJleahqEhiLS0tDSH0paa/wE" rel="noreferrer" title="R – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu27" class="pu"><h1><a href="https://dyalog.com" rel="noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>14 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="noreferrer">SBCS</a></sup></h1>
 <pre><code>{⍵∊∘.+⍨×⍨0,⍳⍵}
