--- a/q/274854.html
+++ b/q/274854.html
@@ -26,14 +26,41 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>148</td><td>R</td><td>240812T082555Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274912#274912">Dominic </a></td></tr>
-<tr d-ix="1"><td>080</td><td>JavaScript ES7</td><td>240809T162406Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274857#274857">Arnauld</a></td></tr>
-<tr d-ix="2"><td>103</td><td>Retina</td><td>240811T000621Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274890#274890">Neil</a></td></tr>
-<tr d-ix="3"><td>018</td><td>Jelly</td><td>240809T183703Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274861#274861">Unrelate</a></td></tr>
-<tr d-ix="4"><td>035</td><td>APLDyalog Unicode</td><td>240810T143509Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274887#274887">akamayu</a></td></tr>
-<tr d-ix="5"><td>041</td><td>Charcoal</td><td>240809T235450Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274866#274866">Neil</a></td></tr>
+<tr d-ix="0"><td>018</td><td>05AB1E</td><td>240812T130802Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274917#274917">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>148</td><td>R</td><td>240812T082555Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274912#274912">Dominic </a></td></tr>
+<tr d-ix="2"><td>080</td><td>JavaScript ES7</td><td>240809T162406Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274857#274857">Arnauld</a></td></tr>
+<tr d-ix="3"><td>103</td><td>Retina</td><td>240811T000621Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274890#274890">Neil</a></td></tr>
+<tr d-ix="4"><td>018</td><td>Jelly</td><td>240809T183703Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274861#274861">Unrelate</a></td></tr>
+<tr d-ix="5"><td>035</td><td>APLDyalog Unicode</td><td>240810T143509Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274887#274887">akamayu</a></td></tr>
+<tr d-ix="6"><td>041</td><td>Charcoal</td><td>240809T235450Z</td><td><a href="https://codegolf.stackexchange.com/questions/274854/generalized-super-luhn/274866#274866">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 148 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 18 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>āRΔDI&lt;¿÷}*ΔIвO}OIÖ
+</code></pre>
+<p>Inputs in the order <span class="math-container">\$list,B\$</span>.</p>
+<p><a href="https://tio.run/##AUAAv/9vc2FiaWX//8SBUs6UREk8wr/Dt30qzpRJ0LJPfU9Jw5b//1s3LDEsMiwzLDQsNSw2LDcsOCw5LDEwLDldCjEy" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/V9Waa@k8KhtkoKSfWVC6P8jjUHnprhE2Bzaf3h7rda5KREXNvnX@kccnvZf5390dLShjomOYayOoVGsjkJ0tLmOoY6RjjFQzFTHTMdcx0LHUsfQQMcSrgDIgcpjClkAhQwhQiBDCRtraIDdXIghEBFjqEgsAA" rel="nofollow noreferrer">verify all test cases</a>.</p>
+<p><strong>Explanation:</strong></p>
+
+<pre class="lang-python prettyprint-override"><code>ā         # Push a list in the range [1, first (implicit) input-length] (without
+          # popping)
+ R        # Reverse it to range [length,1]
+  Δ       # Loop until the result no longer changes:
+   D      #  Duplicate the current list
+    I     #  Push the second input-integer B
+     &lt;    #  Decrease it by 1
+      ¿   #  Get the GCD of each duplicated value with this B-1
+       ÷  #  (Integer-)divide the value by its GCD(value,B-1)
+  }*      # After the changes-loop: multiply them to the original (unreversed)
+          # input-values
+    Δ     # Loop again until the result no longer changes:
+     Iв   #  Convert each inner value to a base-B list
+       O  #  Sum those inner lists together
+    }O    # After the second changes-loop: sum the list together
+      IÖ  # Check whether it's divisible by the second input B
+          # (after which this is output implicitly as result)
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 148 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>\(l,b,s=sapply)sum(s(rev(l)*s(seq(!l),n&lt;-\(x,z=x)`if`(z&gt;1,`if`(x%%z|(b-1)%%z,n(x,z-1),n(x/z)),x)),d&lt;-\(x,a=sum(x%/%b^(0:x)%%b))`if`(a&lt;b,a,d(a))))%%b
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=lY9BbsIwEEX3nMIsIs2giYihlLRKehJUYRcQlUyU4gaZqMdgxyZdcKiepNuOMUrEokhYsvz138z88fF725xMtS7yU_W5itOfwwwMabK5VWVp9mirDVjYLndgcGDBLj-gb5CKLJ6Bozp3OH9fzaF-kXQWLorqL9CxRBZU-BrWXgxrRHJ8F6FX5X62i4aRfoXk2XGDxjBNZZoULUAhH7Yvu_36ReENJIkHEjxVjrB38aZskBiRGJ_hhMQjCTZTEk-MEn6u6r3TVf-PUkayQyH5_nCZ3E7vIloybkn4ftOE9w8" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -52,7 +79,7 @@ luhn=
 function(l,b)sum(sapply(rev(l)*sapply(seq(!l),ncd,y=b-1),digital_root,base=b))%%b
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1>JavaScript (ES7), 80 bytes</h1>
+<div id="pu2" class="pu"><h1>JavaScript (ES7), 80 bytes</h1>
 <p>Expects <code>(base)(list)</code>. Returns zero for truthy or non-zero for falsy.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>(b,i=!b--)=&gt;g=a=&gt;a+a&amp;&amp;(G=(x,y)=&gt;y?G(y,x%y):(a.pop()*i/x-1)%b-~g(a))(++i,b**i)%~b
@@ -90,7 +117,7 @@ a + a &amp;&amp; (      // if a[] is not empty:
 % ~b            // reduce the final result modulo the original base
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language" rel="nofollow noreferrer">Retina</a>, 103 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language" rel="nofollow noreferrer">Retina</a>, 103 bytes</h1>
 <pre><code>\D
 :$&lt;;&amp;$&amp;
 \d+
@@ -132,7 +159,7 @@ r`^\1*;(_+)$
 </code></pre>
 <p>Check whether the base divides the sum.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 18 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 18 bytes</h1>
 <pre><code>J:g¥Ƭ’}ṪU×ḷb§¥ƬṪS%
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8/9/LKv3Q0mNrHjXMrH24c1Xo4ekPd2xPOrQcJAbkB6v@P7xcXzPy///o6GhDHQUTHQXDWB1Do1gdruhocx1DHSMdYx0THVMdMx1zHQsdSx1DAx1LuAIgByqPKWQBFDKECEGMJcJkQwPsRkPMgYgYw0ViAQ" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -164,7 +191,7 @@ JçU×ḷb§¥ƬṪS%
 </code></pre>
 <p>No prime factor of any index has a multiplicity greater than that index, so it suffices to exponentiate B - 1 that many times.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>35 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
+<div id="pu5" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>35 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
 <p>A dfn that takes B and N as its left and right arguments, respectively. It outputs zero for true instances and non-zero output for false instances.</p>
 <pre><code>{⍺|+⌿⍺(+⌿⊥⍣¯1)⍣≡⍵×(⍺-1)(⊢÷∨)⍣≡⌽⍳≢⍵}
                               ⌽⍳≢⍵  ⍝ Reversed indices of N
@@ -175,7 +202,7 @@ JçU×ḷb§¥ƬṪS%
 </code></pre>
 <p><a href="https://razetime.github.io/APLgolf/?h=C1F41DZBofpRV3P1o95dOuoK6jqPerfW6j/qnXpoBVBEQT1NXQEoogAk2yYBSQ2QIBBDqK2atQA&amp;c=q37Uu6tG@1HPfiCtAaa7lj7qXXxovaEmkHrUufBR79bD0zWAsrqGmhqPuhYd3v6oYwVMrmfvo97NjzoXARXVAgA&amp;f=K1F41DZBIU0hhMvQSKFEwVDBRMEQwjQHcowUjIECpgpmQJ6FgqWCoYGCJVShAUySy9AQmW/B9ahvKtBMdV0CQB3JRgJ2GhqgWQK1FMI1VjAFAA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 41 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 41 bytes</h1>
 <pre><code>¬﹪ΣＥθ∧ι⊕﹪⊖×ι⌈Φ⊕Ｅθμ∧¬﹪⁻Ｌθκλ⬤…²η∨﹪λν﹪⊖ην⊖ηη
 </code></pre>
 <p><a href="https://tio.run/##bY5Ba8JAEIX/yh4n8AomVq14EoogdK203kIOS7IkS3cnum5K//12U5VW6MDA8M17b6bulK97ZWPce8OBdn0g2TeD7el9cCTVkU4Qa27IQGy59tppDrq5iZ71LzoYp8@jTqov45J7Y2zQnu5sl0CXZZfUP/ek4eFML5rb0NEp7T9S2x@htfSmuNVUQHQJvPqbyUJwAv98M@o4uxbE/eoKx2EVY1kukKPAFI@YYY4FnrBEPsGyQl5U8eHTfgM" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Outputs a Charcoal boolean, i.e. <code>-</code> if Luhn, nothing if not. Explanation: Mostly doing recursive GCD without having access to recursion or GCD.</p>
