--- a/index.html
+++ b/index.html
@@ -16,15 +16,16 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240812T133819Z
+"   /golfscore                                      20240812T134950Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/274690.html">Cubic Concatenation                             : 0274690</a>
+<a href="q/100060.html">Goodness Giza Golf!                             : 0100060</a>
 <a href="q/242459.html">Sum of two squares                              : 0242459</a>
 <a href="q/274854.html">Generalized Super-Luhn                          : 0274854</a>
-<a href="q/274690.html">Cubic Concatenation                             : 0274690</a>
 <a href="q/274596.html">Is this a valid Irish word?                     : 0274596</a>
 <a href="q/274758.html">Do something you cant do in Brainfuck           : 0274758</a>
 <a href="q/274485.html">Find the newest element                         : 0274485</a>
