--- a/q/100060.html
+++ b/q/100060.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>022</td><td>Haskell + hgl</td><td>240812T134722Z</td><td><a href="https://codegolf.stackexchange.com/questions/100060/goodness-giza-golf/274920#274920">Wheat Wi</a></td></tr>
-<tr d-ix="1"><td>048</td><td>Haskell</td><td>240812T134834Z</td><td><a href="https://codegolf.stackexchange.com/questions/100060/goodness-giza-golf/274921#274921">Wheat Wi</a></td></tr>
+<tr d-ix="0"><td>047</td><td>Haskell</td><td>240812T134834Z</td><td><a href="https://codegolf.stackexchange.com/questions/100060/goodness-giza-golf/274921#274921">Wheat Wi</a></td></tr>
+<tr d-ix="1"><td>022</td><td>Haskell + hgl</td><td>240812T134722Z</td><td><a href="https://codegolf.stackexchange.com/questions/100060/goodness-giza-golf/274920#274920">Wheat Wi</a></td></tr>
 <tr d-ix="2"><td>034</td><td>Perl 6</td><td>190512T015850Z</td><td><a href="https://codegolf.stackexchange.com/questions/100060/goodness-giza-golf/185472#185472">bb94</a></td></tr>
 <tr d-ix="3"><td>109</td><td>Java 7</td><td>161116T205501Z</td><td><a href="https://codegolf.stackexchange.com/questions/100060/goodness-giza-golf/100099#100099">Poke</a></td></tr>
 <tr d-ix="4"><td>056</td><td>Mathematica</td><td>161118T155133Z</td><td><a href="https://codegolf.stackexchange.com/questions/100060/goodness-giza-golf/100324#100324">Kelly Lo</a></td></tr>
@@ -62,7 +62,14 @@
 <tr d-ix="33"><td>022</td><td>Actually</td><td>161116T173154Z</td><td><a href="https://codegolf.stackexchange.com/questions/100060/goodness-giza-golf/100073#100073">user4594</a></td></tr>
 <tr d-ix="34"><td>035</td><td>Cjam</td><td>161116T170003Z</td><td><a href="https://codegolf.stackexchange.com/questions/100060/goodness-giza-golf/100065#100065">A Simmon</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, 22 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a>, <s>48</s> 47 bytes</h1>
+<p><em>1 byte saved thanks to <a href="https://codegolf.stackexchange.com/users/20260/xnor">@xnor</a></em></p>
+<pre class="lang-haskell prettyprint-override"><code>f x=or[x==[j..pred i]++[i,pred i..j]|i&lt;-x,j&lt;-x]
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m708I7E4OzUnZ8GCpaUlaboWN_XTFCps84uiK2xto7P09AqKUlMUMmO1taMzdSBsPb2s2JpMG90KnSwgEQvVVpObmJmnYKuQks-loJCbWOAbr6BRUJSZV6Kgp5CmqaACFFVQiFZQMlQCs3QUlIwRLBME29zC0sIczjM0MkLSYIKsytAArhDqBpgXAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Improves upon <a href="https://codegolf.stackexchange.com/a/100087/56656">nimi's haskell answer</a>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, 22 bytes</h1>
 <pre><code>x1(yS$Ng&lt;&lt;x' 1)&lt;δ&lt;bs0
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m708I7E4OzUnZ8FNxczcgvyiEoXC0sSczLTM1BSFgKLUnNKUVC6oRMDS0pI0XYsdabYVhhqVwSp-6TY2FeoKhpo257bYJBUbQKRv5ucmZuYp2Cqk5HMpKOTGK2gUFCnYKKRpKqgA-QoK0QqGClZWCp55JWCujoIxjDaBscwtLC3MoWxDIyNDuAKEvKEBTEksxNoFCyA0AA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -86,12 +93,6 @@
 <li>There should be versions of <code>x_</code> and <code>x'</code> which return the number of symbols parsed rather than the symbols themselves.</li>
 <li>There should be a function to take a number and a symbol and parse exactly that many of that symbol.</li>
 </ul>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a>, 48 bytes</h1>
-<pre class="lang-haskell prettyprint-override"><code>f x=elem x[[j..pred i]++[i,pred i..j]|i&lt;-x,j&lt;-x]
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m708I7E4OzUnZ8GCpaUlaboWNw3SFCpsU3NScxUqoqOz9PQKilJTFDJjtbWjM3UgbD29rNiaTBvdCp0sIBEL1VeTm5iZp2CrkJLPpaCQm1jgG6-gUVCUmVeioKeQpqmgAhRVUIhWUDJUArN0FJSMESwTBNvcwtLCHM4zNDJC0mCCrMrQAK4Q6gaYHwA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>Improves upon <a href="https://codegolf.stackexchange.com/a/100087/56656">nimi's haskell answer</a>.</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/nxadm/rakudo-pkg" rel="nofollow noreferrer">Perl 6</a>, <s>43</s> 34 bytes</h1>
 
