--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240812T145522Z
+"   /golfscore                                      20240812T150806Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/274924.html">Shift right by half a trit                      : 0274924</a>
 <a href="q/274758.html">Do something you cant do in Brainfuck           : 0274758</a>
 <a href="q/100060.html">Goodness Giza Golf!                             : 0100060</a>
 <a href="q/274485.html">Find the newest element                         : 0274485</a>
