--- a/q/274924.html
+++ b/q/274924.html
@@ -26,16 +26,23 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>048</td><td>JavaScript ES6</td><td>240812T150806Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274926#274926">Arnauld</a></td></tr>
-<tr d-ix="1"><td>015</td><td>Vyxal</td><td>240812T150516Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274925#274925">lyxal</a></td></tr>
+<tr d-ix="0"><td>057</td><td>Python 3</td><td>240812T151642Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274928#274928">xnor</a></td></tr>
+<tr d-ix="1"><td>048</td><td>JavaScript ES6</td><td>240812T150806Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274926#274926">Arnauld</a></td></tr>
+<tr d-ix="2"><td>015</td><td>Vyxal</td><td>240812T150516Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274925#274925">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 48 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 57 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>f=lambda n,c=1:n//c&gt;2and f(n,c*3)or[0,(n+c)//3,n-c][n//c]
+</code></pre>
+<p><a href="https://tio.run/##FYxBDsIgFAXXeoq/LPoNwrfWNKkXaVggDbFJfRDSjadH3M5MJn/3d4I8cqk1Tpv/vBZP4DCZEVqHp/VYKHaNnESlMl@5wzkorYVxCW7@R67GVAi0gpo3bNne2Q7cC/c3NiKDG4@HXFbsbdRmStUf" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES6), 48 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=(n,k=1)=&gt;n&lt;k*3?n/k^1?n&amp;&amp;n-k:(n+k)/3|0:f(n,k*3)
 </code></pre>
 <p><a href="https://tio.run/##dcxLCsIwFEDRuavIqCS1NZ9n01CM3YlQaiOa8iJWHLn3iDQjg@NzubfhNSzj43p/1hjOU4zOUqy8lcwe8eBL6JH7k@yxKLD2HcWtZxzeonPfrAQWx4BLmKfdHC7UUUKIYIxwTsQmE/lX1CoyE6WTtDm1iUxGDaykdE77RL9DCZCG2pj4AQ" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 15 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 15 bytes</h1>
 <pre><code>[3τḣ$⌐⇧~p$ċßṪ3β
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJ+IiwiIiwiWzPPhOG4oyTijJDih6d+cCTEi8Of4bmqM86yIiwiIiwiMCAtPiAwXG4xIC0+IDBcbjIgLT4gMVxuMjYgLT4gMTdcbjI3IC0+IDE4XG41MyAtPiAyNlxuNTQgLT4gMjdcbjEzMzcgLT4gNjg4Il0=" rel="nofollow noreferrer">Try it Online!</a></p>
