--- a/q/274924.html
+++ b/q/274924.html
@@ -26,15 +26,15 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>057</td><td>Python 3</td><td>240812T151642Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274928#274928">xnor</a></td></tr>
+<tr d-ix="0"><td>055</td><td>Python 3</td><td>240812T151642Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274928#274928">xnor</a></td></tr>
 <tr d-ix="1"><td>048</td><td>JavaScript ES6</td><td>240812T150806Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274926#274926">Arnauld</a></td></tr>
 <tr d-ix="2"><td>015</td><td>Vyxal</td><td>240812T150516Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274925#274925">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 57 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 55 bytes</h1>
 
-<pre class="lang-python prettyprint-override"><code>f=lambda n,c=1:n//c&gt;2and f(n,c*3)or[0,(n+c)//3,n-c][n//c]
+<pre class="lang-python prettyprint-override"><code>f=lambda n,c=1:n&gt;c and f(n,c*3)or[0,(n+c)//3,n-c][n//c]
 </code></pre>
-<p><a href="https://tio.run/##FYxBDsIgFAXXeoq/LPoNwrfWNKkXaVggDbFJfRDSjadH3M5MJn/3d4I8cqk1Tpv/vBZP4DCZEVqHp/VYKHaNnESlMl@5wzkorYVxCW7@R67GVAi0gpo3bNne2Q7cC/c3NiKDG4@HXFbsbdRmStUf" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##DcxBCsIwEEbhtZ5ilo1OiclYWwr1IiWLmBIs6J8QuvH0McvHgy//jneCTLnUGpeP/742T@CwmBnPQB4bxa71RVQq6407XIPSWhh9cCu0Dq7GVAi0g9o3bNk@2I48CA93NiKjm8@nXHYcDWqYUvUP" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1>JavaScript (ES6), 48 bytes</h1>
 
