--- a/q/274924.html
+++ b/q/274924.html
@@ -26,12 +26,25 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>034</td><td>JavaScript Node.js</td><td>240812T154332Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274930#274930">l4m2</a></td></tr>
-<tr d-ix="1"><td>055</td><td>Python 3</td><td>240812T151642Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274928#274928">xnor</a></td></tr>
+<tr d-ix="0"><td>055</td><td>Python 3</td><td>240812T151642Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274928#274928">xnor</a></td></tr>
+<tr d-ix="1"><td>034</td><td>JavaScript Node.js</td><td>240812T154332Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274930#274930">l4m2</a></td></tr>
 <tr d-ix="2"><td>048</td><td>JavaScript ES6</td><td>240812T150806Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274926#274926">Arnauld</a></td></tr>
 <tr d-ix="3"><td>015</td><td>Vyxal</td><td>240812T150516Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274925#274925">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 34 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 55 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>f=lambda n,c=1:n&gt;c and f(n,c*3)or[0,(n+c)//3,n-c][n//c]
+</code></pre>
+<p><a href="https://tio.run/##DcxBCsIwEEbhtZ5ilo1OiclYWwr1IiWLmBIs6J8QuvH0McvHgy//jneCTLnUGpeP/742T@CwmBnPQB4bxa71RVQq6407XIPSWhh9cCu0Dq7GVAi0g9o3bNk@2I48CA93NiKjm8@nXHYcDWqYUvUP" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+<p>The termination condition <code>n&gt;c</code> looks wrong but it happens to work out with <code>and/or</code>.</p>
+<h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 43 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>f=lambda n:n&gt;1and(n//3==f(1+f(n-1)))+f(n-1)
+</code></pre>
+<p><a href="https://tio.run/##LcqxCoAgFAXQub7C8T0qRCQIwf7FMEuoq4hLX28NbWc4@alngl5yaS3Yy92bdwIGq3LwBCm1tYHUEAiTYuYfLaQiICJEcTh2UjObvsslohLG7zC3Fw" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+<p>Recursive magic from <a href="https://codegolf.stackexchange.com/a/274930/20260">l4m2's answer</a>, no idea how it works.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 34 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=n=&gt;n&lt;2?0:!(n/3^f(1+f(--n)))+f(n)
 </code></pre>
@@ -43,13 +56,6 @@
 </code></pre>
 <p><a href="https://tio.run/##JYpBDsIgEEX3noJlp7SFys4yegIPQdqiGDJjaGNceHeEdPXe/3kv93HbnMJ774mXNWePDXUBR8Ar2XCjPijz0xey57YsZeSxfa1aA9lzEk1YvqgnUWBHXUTKonCamTaO6xD5UZNO@AqoPAwEori7/Tn4yJzqpwxA/gM" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Fast, not sure relation between Arnauld's solution</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 55 bytes</h1>
-
-<pre class="lang-python prettyprint-override"><code>f=lambda n,c=1:n&gt;c and f(n,c*3)or[0,(n+c)//3,n-c][n//c]
-</code></pre>
-<p><a href="https://tio.run/##DcxBCsIwEEbhtZ5ilo1OiclYWwr1IiWLmBIs6J8QuvH0McvHgy//jneCTLnUGpeP/742T@CwmBnPQB4bxa71RVQq6407XIPSWhh9cCu0Dq7GVAi0g9o3bNk@2I48CA93NiKjm8@nXHYcDWqYUvUP" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
-<p>The termination condition <code>n&gt;c</code> looks wrong but it happens to work out with <code>and/or</code>.</p>
 </div>
 <div id="pu2" class="pu"><h1>JavaScript (ES6), 48 bytes</h1>
 
