--- a/q/64938.html
+++ b/q/64938.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>045</td><td>Vyxal 3</td><td>240812T002808Z</td><td><a href="https://codegolf.stackexchange.com/questions/64938/adjacent-letter-test/274903#274903">bb94</a></td></tr>
-<tr d-ix="1"><td>020</td><td>Japt</td><td>240811T152510Z</td><td><a href="https://codegolf.stackexchange.com/questions/64938/adjacent-letter-test/274899#274899">Shaggy</a></td></tr>
+<tr d-ix="0"><td>020</td><td>Japt</td><td>240811T152510Z</td><td><a href="https://codegolf.stackexchange.com/questions/64938/adjacent-letter-test/274899#274899">Shaggy</a></td></tr>
+<tr d-ix="1"><td>045</td><td>Vyxal 3</td><td>240812T002808Z</td><td><a href="https://codegolf.stackexchange.com/questions/64938/adjacent-letter-test/274903#274903">bb94</a></td></tr>
 <tr d-ix="2"><td>067</td><td>Uiua</td><td>240811T114839Z</td><td><a href="https://codegolf.stackexchange.com/questions/64938/adjacent-letter-test/274898#274898">nyxbird</a></td></tr>
 <tr d-ix="3"><td>156</td><td>Clojure</td><td>171212T132001Z</td><td><a href="https://codegolf.stackexchange.com/questions/64938/adjacent-letter-test/150446#150446">NikoNyrh</a></td></tr>
 <tr d-ix="4"><td>1731</td><td>PHP</td><td>171130T133124Z</td><td><a href="https://codegolf.stackexchange.com/questions/64938/adjacent-letter-test/149560#149560">Titus</a></td></tr>
@@ -35,7 +35,29 @@
 <tr d-ix="6"><td>227</td><td>C#</td><td>151127T040550Z</td><td><a href="https://codegolf.stackexchange.com/questions/64938/adjacent-letter-test/64942#64942">noisyass</a></td></tr>
 <tr d-ix="7"><td>078</td><td>Japt</td><td>151127T032821Z</td><td><a href="https://codegolf.stackexchange.com/questions/64938/adjacent-letter-test/64940#64940">ETHprodu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, 45 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 20 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<p>Takes input in uppercase</p>
+<pre><code>;ø4o!z9õ ¬+DiRiV¹cã3
+</code></pre>
+<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=O/g0byF6OfUgrCtEaVJpVrlj4zM&amp;input=IkFTRFIi" rel="nofollow noreferrer">Try it</a></p>
+<pre><code>;ø4o!z9õ ¬+DiRiV¹cã3     :Implicit input of string
+ ø                       :Does it contain any element of
+  4o                     :  Range [0,4)
+    !z                   :  Map each X to the following rotated 90º X times
+      9õ                 :    Range [1,9]
+         ¬               :    Join
+          +              :    Append
+;          D             :      &quot;QWERTYUIOP\nASDFGHJKL\nZXCVBNM&quot;
+            i            :      Prepend
+             R           :        Newline
+              i          :        Prepend
+               V         :          Second input variable (defaults to 0)
+                ¹        :End map
+                 c       :Flat map
+                  ã3     :  Substrings of length 3
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, 45 bytes</h1>
 <p>Returns the number of (possibly overlapping) runs.</p>
 <pre><code>9zṘ“&quot;ᶜ½(ẆNᴳṀ⊻ᵡHṗᵏ₀Ṃ]Ḅġ„+£ƛ¥$Ḟ:₀Ṡ$₀%;}ᵃȧṠ1=ᵃ∧∑
 </code></pre>
@@ -54,11 +76,6 @@
 💎
 </code></pre>
 <p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 20 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
-<pre><code>;ø4o!z9õ ¬+DiRiV¹cã3
-</code></pre>
-<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=O/g0byF6OfUgrCtEaVJpVrlj4zM&amp;input=IkFTRFIi" rel="nofollow noreferrer">Try it</a></p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://www.uiua.org" rel="nofollow noreferrer">Uiua</a>, 67 bytes</h1>
 <pre><code>↥∩(/↥♭≡⌕⊙¤◫3),⊙:∩[≡⇌.]⍉.↯4_∞⊂+@1⇡9&quot;0qwertyuiopasdfghjkl zxcvbnm   &quot;
